Optimize starters auto-configuration. (main) (#391)